src/renderer/src/assets/styles/theme.css
@theme {
  --default-font-family: "DM Sans", system-ui, sans-serif;
  --font-sans: "DM Sans", system-ui, sans-serif;
  --font-serif: "DM Sans", system-ui, sans-serif;
  --font-mono: "DMMono-Regular", system-ui, sans-serif;
}

:root {
  color-scheme: light;

  --c-base-100: oklch(98% 0.01 265.754);
  --c-base-200: oklch(95% 0.01 265.754);
  --c-base-300: oklch(92% 0.01 265.754);
  --c-base-content: oklch(20% 0.02 265.754);

  --c-accent: oklch(72% 0.17 190);

  --c-info: oklch(75% 0.15 200);
  --c-success: oklch(75% 0.15 120);
  --c-warning: oklch(75% 0.15 80);
  --c-error: oklch(70% 0.15 15);
}

.dark {
  color-scheme: dark;

  --c-base-100: oklch(15% 0.02 265);
  --c-base-200: oklch(18% 0.02 265);
  --c-base-300: oklch(22% 0.02 265);
  --c-base-content: oklch(85% 0.01 265);

  --c-accent: oklch(72% 0.17 190);

  --c-info: oklch(80% 0.15 200);
  --c-success: oklch(75% 0.2 150);
  --c-warning: oklch(85% 0.15 90);
  --c-error: oklch(70% 0.2 20);
}

@theme {
  --color-base-100: var(--c-base-100);
  --color-base-200: var(--c-base-200);
  --color-base-300: var(--c-base-300);
  --color-base-content: var(--c-base-content);

  --color-accent: var(--c-accent);

  --color-info: var(--c-info);
  --color-success: var(--c-success);
  --color-warning: var(--c-warning);
  --color-error: var(--c-error);
}

@utility focus-visible-accent {
  @apply focus-visible:ring-offset-base-100 focus-visible:ring-accent focus-visible:ring-2 focus-visible:ring-offset-1;
}

